Fixes top spacing on subsequent pages of multifilter printout

--- a/public/print.css
+++ b/public/print.css
@@ -2,7 +2,7 @@
 
 body {
   font-size: 12px;
-  font-family: "Source Sans Pro";
+  font-family: 'Source Sans Pro';
   background: #f5f8fa !important;
 }
 
